--- a/css/estilo_001.css
+++ b/css/estilo_001.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -11,12 +12,23 @@ html, body {
 }
 
 .carousel {
-    height: 100vh; /* 100% de la altura de la ventana */
-    overflow: hidden; /* Evitar que crezca cuando se haga scroll */
+    height: 100vh;
+    /* 100% de la altura de la ventana */
+    overflow: hidden;
+    /* Evitar que crezca cuando se haga scroll */
 }
 
 /* Asegurar que las imágenes del carrusel también ocupen el 100% */
 .carousel-item img {
     height: 100vh;
-    object-fit: cover; /* Asegura que las imágenes cubran el contenedor sin distorsionarse */
+    object-fit: cover;
+    /* Asegura que las imágenes cubran el contenedor sin distorsionarse */
+}
+
+.navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
 }
