--- a/css/estilo_001.css
+++ b/css/estilo_001.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    background-color: #212529;
 }
 
 .container-fliud {
@@ -40,5 +41,15 @@ body {
 
 footer {
     padding: 0;
-    margin-top: 12px; 
+    margin-top: 12px;
+}
+
+/* Ocultar la barra de desplazamiento inicialmente */
+html {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+html::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
 }
