--- a/css/estilo_001.css
+++ b/css/estilo_001.css
@@ -42,6 +42,7 @@ body {
 footer {
     padding: 0;
     margin-top: 12px;
+    border-top: 1px gray solid;
 }
 
 /* Ocultar la barra de desplazamiento inicialmente */
