--- a/css/estilo_001.css
+++ b/css/estilo_001.css
@@ -43,6 +43,7 @@ footer {
     padding: 0;
     margin-top: 12px;
     border-top: 1px gray solid;
+    color: gray;
 }
 
 /* Ocultar la barra de desplazamiento inicialmente */
