--- a/css/estilo_002.css
+++ b/css/estilo_002.css
@@ -12,6 +12,14 @@ body {
     background-color: lightblue;
 }
 
+.navbar {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+}
+
 footer {
     padding: 0;
     margin-top: 12px;
