--- a/css/estilo_001.css
+++ b/css/estilo_001.css
@@ -55,3 +55,9 @@ html {
 html::-webkit-scrollbar {
     display: none; /* Chrome, Safari, Opera */
 }
+
+.card {
+    background: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(10px); /* Difuminado del fondo */
+    color: gray;
+}
