--- a/css/estilo_001.css
+++ b/css/estilo_001.css
@@ -6,7 +6,7 @@ body {
     background-color: #212529;
 }
 
-.container-fliud {
+.container-fluid {
     width: 100%;
     height: 100%;
     background-color: lightblue;
