--- a/css/estilo_002.css
+++ b/css/estilo_002.css
@@ -4,12 +4,12 @@ body {
     padding: 0;
     height: 100%;
     background-color: #212529;
+    color: gray;
 }
 
-.container-fliud {
+.container-fluid {
     width: 100%;
     height: 100%;
-    background-color: lightblue;
 }
 
 .navbar {
@@ -25,6 +25,7 @@ footer {
     margin-top: 12px;
     border-top: 1px gray solid;
     color: gray;
+    padding: 15px;
 }
 
 /* Ocultar la barra de desplazamiento inicialmente */
