--- a/css/estilo_001.css
+++ b/css/estilo_001.css
@@ -11,6 +11,11 @@ body {
     height: 100%;
 }
 
+.container {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
 .carousel {
     height: 100vh;
     /* 100% de la altura de la ventana */
@@ -59,4 +64,37 @@ html::-webkit-scrollbar {
     background: rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(10px); /* Difuminado del fondo */
     color: gray;
+}
+
+.card img {
+    align-items: center;
+    object-fit: cover;
+    width: 100%;
+}
+
+.ejemploprompt {
+    color: #198754; /* Color del texto (verde) */
+    border: 1px solid #198754; /* Borde del mismo color que el texto */
+    background-color: transparent; /* Fondo transparente */
+    padding: 0.375rem 0.75rem; /* Padding similar al de Bootstrap */
+    font-size: 1rem; /* Tamaño de fuente estándar */
+    border-radius: 0.25rem; /* Borde redondeado */
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; /* Transiciones */
+    cursor: pointer; /* Cambia el cursor al de pointer */
+}
+
+.ejemploprompt:hover {
+    color: #fff; /* Cambiar el color del texto al blanco */
+    background-color: #198754; /* Fondo verde al hacer hover */
+    border-color: #198754; /* Mantiene el color del borde al hacer hover */
+}
+
+.ejemploprompt:focus {
+    box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.5); /* Sombra para accesibilidad al hacer focus */
+    outline: none; /* Elimina el borde predeterminado de focus */
+}
+
+.ejemploprompt:active {
+    background-color: #146c43; /* Color más oscuro cuando se presiona */
+    border-color: #146c43; /* Cambiar el borde al presionar */
 }
